--- a/index.html
+++ b/index.html
@@ -1,37 +1,102 @@
+<!DOCTYPE html>
+ 
 <html lang="en">
+ 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="styles.css">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <title>My Portfolio</title>
+  <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div>
-        <div class="navbar">
-            <div class="nav-logo">
-                <span><h1>JOEDINESH</h1></span>
-            </div>
-            <div class="nav-list">
-                <ul>
-                    <li><a href="home">HOME</a></li>
-                    <li><a href="about">ABOUT</a></li>
-                    <li><a href="skill">SKILLS</a></li>
-                    <li><a href="projects">PROJECT</a></li>
-                    <li><a href="contact">CONTACT</a></li>
-                </ul>
-            </div>
-        </div>
-        <section id="about" class="about-section">
-            <div class="about-image">
-                <img src="c:\Users\Kathiravan\Downloads\IMG_20230929_201014.jpg" alt="Your Image">
-            </div>
-            <div class="about-content">
-                <h2>About Me</h2>
-                <br>
-                <br>
-                <p>Your introduction and details about yourself go here.</p>
-            </div>
-        </section>
+   
+  <header>
+   
+    <span class="typed-cursor" aria-hidden="true">|</span>
+
+      <nav>
+        <h1 class="typewriter">My Portfolio</h1>
+        <ul>
+          <li><a href="#home">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#contact">Contact</a></li>
+        </ul>
+      </nav>
     </div>
+  </header>
+
+  <main>
+  
+    <section id="home">
+      <div class="container">
+        <h2>Welcome to my Portfolio</h2>
+        <p>Introduce yourself or showcase your skills here.</p>
+      </div>
+    </section>
+    
+  
+    <section id="about">
+      <div class="container">
+        <h2>About Me</h2>
+        <p>Write something about yourself here.</p>
+      </div>
+    </section>
+
+    <section id="project">
+      <div class="container">
+        <h2>Projects</h2>
+        <!-- Add your projects here -->
+        <div class="project">
+          <h3>Project Title</h3>
+          <p>Description of the project.</p>
+          <a href="#">View Project</a>
+        </div>
+
+      </div>
+    </section>
+    <div class="container1">
+      <div class="projects">
+        <h3>ui/ux</h3>
+        <P>In digital design, user interface (UI) refers to the interactivity, look, and feel of a product screen or web page, while user experience (UX) covers a user's overall experience with the product or website.</P>
+      <button>Read more</botton>
+      </div>
+
+    </div>
+    <div class="container1">
+      <div class="projects">
+        <h3>ui/ux</h3>
+        <P>In digital design, user interface (UI) refers to the interactivity, look, and feel of a product screen or web page, while user experience (UX) covers a user's overall experience with the product or website.</P>
+      <button>Read more</botton>
+      </div>
+
+    </div>
+    <div class="container1">
+      <div class="projects">
+        <h3>ui/ux</h3>
+        <P>In digital design, user interface (UI) refers to the interactivity, look, and feel of a product screen or web page, while user experience (UX) covers a user's overall experience with the product or website.</P>
+      <button>Read more</botton>
+      </div>
+
+    </div>
+  </main>
+
+
+  <footer>
+      <h>&copy; 2024 THIVAGHAR</h>
+     
+  </footer>
+
 </body>
+<script>
+  document.addEventListener("DOMContentLoaded", function () {
+    var options = {
+        strings: ['thivaghar', 'Designer', 'Developer'],
+        typeSpeed: 100,
+        backSpeed: 100,
+        loop: true
+    };
+
+    var typed = new Typed('.typing', options);
+  });
+</script>
 </html>
